# NORTRIP_python

./: .gitignore  About.md  NORTRIP_Control.ipynb  README.md  main.py  pyproject.toml  wrongvalues.txt
Spread_sheet_calculators/: Traction_sand_tier1_tabulated_calculator_v1.xlsx  Traction_sand_tier2_spreadsheet_calculator_v1.xlsx
input_data/: NORTRIP_input_data_example.xlsx  ~$NORTRIP_input_data_example.xlsx
model_parameters/: Road_dust_parameter_table_example.xlsx  Road_dust_parameter_table_v10.xlsx  Road_dust_parameter_table_v11 copy.xlsx  Road_dust_parameter_table_v11.xlsx  Road_dust_parameter_table_v12.xlsx  Road_dust_parameter_table_v12_sanding_article.xlsx  Road_dust_parameter_table_v5.xlsx  Road_dust_parameter_table_v7.xlsx  Road_dust_parameter_table_v8.xlsx  Road_dust_parameter_table_v8b.xlsx  Road_dust_parameter_table_v9.xlsx  Road_dust_parameter_table_v9_Denby.xlsx  Road_dust_parameter_table_v9_E18.xlsx  Road_dust_parameter_table_v9_E18_crushing.xlsx  Road_dust_parameter_table_v9_Simair_2.xlsx  Road_dust_parameter_table_v9_test.xlsx  Road_dust_parameter_table_v9_test_Hornsgatan.xlsx  TRV atgarder Sundsvall 250121_settings.xlsx  ~$Road_dust_parameter_table_v11.xlsx
model_paths/: model_paths_and_files.xlsx  model_paths_and_files_sanding_python.xlsx
model_paths/text/: model_paths_and_files.txt
output_data/: Hornsgatan 2010-2011 python_day.xlsx  Hornsgatan 2011-2012 python_day.xlsx  example_output_day.xlsx  missing_filename_day.xlsx  noe_data_day.txt
src/: NORTRIP_Control.py  NORTRIP_Notebook.ipynb  load_model_parameters.py  main_nortrip_loop.py  model_args.py
tests/: test_model_args.py
(+203 files in other folders)
