[project]
name = "nortrip-python"
version = "0.1.0"
description = "Python version of the Nortrip script"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
]

[project.scripts]
nortrip = "NORTRIP_Control:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]

[tool.ruff.lint]
extend-select = ["B"]
