[project]
name = "nortrip-python"
version = "0.1.0"
description = "Python version of the Nortrip script"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
]

[project.scripts]
nortrip = "NORTRIP_Control:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.11.13",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[tool.ruff.lint]
extend-select = ["B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=src",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
